# CHAOS

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
chaos/: __init__.py  types.py
chaos/agents/: __init__.py  base.py  information_seeker.py  planner.py  sensemaker.py  verifier.py
chaos/core/: __init__.py  config.py  context.py  execution.py  interaction.py  interactive_orchestrator.py  logger.py  orchestrator.py  state.py
chaos/data/: __init__.py  base.py  registry.py  sandbox.py  schema.py
chaos/llm/: __init__.py  client.py  structured_client.py
chaos/memory/: __init__.py  memory.py
chaos/tools/: __init__.py  base.py  registry.py
chaos/ui/: __init__.py  display.py  export.py  prompts.py
datasets/: data_schema.yaml
datasets/gloss_sample/: app_usage_logs.csv  garmin_hr.csv  garmin_steps.csv  garmin_stress.csv  ios_activity.csv  ios_battery.csv  ios_brightness.csv  ios_calllog.csv  ios_lock_unlock.csv  ios_steps.csv  ios_wifi.csv
exported_runs/: 20260128_171814_What_is_the_max_heart_rate_of_test004_an.md  20260130_140847_What_is_the_max_heart_rate_of_test004_an.md  20260203_183816_What_is_the_max_heart_rate_of_test004_an.md  20260218_140818_Total_duration_of_phone_use_done_by_test.md
manual-runs/: runs.md
sandbox/: executor.py
scripts/: install-sandbox.sh
